--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
 theme: jekyll-theme-cayman
+title: cayman's homepage
+description: Bookmark this to keep an eye on my project updates!
 markdown: kramdown
 kramdown:
    auto_ids: true
