--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-cayman
-title: cayman's homepage
-description: Bookmark this to keep an eye on my project updates!
+title: বেতুয়া ক্লাব
+description: Internet Service updated
 markdown: kramdown
 kramdown:
    auto_ids: true
