--- a/_config.yml
+++ b/_config.yml
@@ -4,3 +4,10 @@ description: Internet Service updated
 markdown: kramdown
 kramdown:
    auto_ids: true
+---
+title-heading: false
+---
+
+# This is my custom heading
+
+This is my content.
