--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
 # Setup
-title:        Project or Site name
-tagline:      A responsive theme for your project on GitHub Pages
+title:        বেতুয়া ক্লাব
+tagline:      বেতুয়া ক্লাব রেজিষ্ট্রেশন 
 baseurl:      ""
 paginate:     1
 locale:       "en"
 
 # About/contact
 author:
-  name:       Author name
-  url:        http://yourhomepage.com 
+  name:       betua club
+  url:        https://betuaclub.ml
 
 # Gems
 gems:
