--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
   "website": "https://github.com/socketio/chat-example",
   "repository": "https://github.com/socketio/chat-example",
   "logo": "https://node-js-sample.herokuapp.com/node.svg",
-  "success_url": "/",
+  "success_url": "https://betuaclub.ml",
   "keywords": [
     "node",
     "express",
